@@ -34,7 +34,6 @@ int SIO_RotateDisks(void);
 void SIO_Handler(void);
 
 UBYTE SIO_ChkSum(const UBYTE *buffer, int length);
-void SIO_TapeMotor(int onoff);
 void SIO_SwitchCommandFrame(int onoff);
 void SIO_PutByte(int byte);
 int SIO_GetByte(void);
